# mnemos

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Justfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  todos.yml
backend/: .dockerignore  .env.dev  .env.secrets.example  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini
backend/app/: config.py  logging_config.py  main.py
backend/app/middleware/: logging.py  request_id.py  security.py
backend/app/models/: ai.py  common.py  errors.py  health.py
backend/app/routes/: ai.py  health.py
backend/app/services/: openai_service.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_openai_service.py
backend/tests/unit/: test_ai_models.py  test_ai_routes.py  test_common_models.py  test_health_routes.py  test_openai_service.py
